--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "config": "^3.3.9",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/config": "^3.3.0",
+    "@types/express": "^4.17.17"
   }
 }
